# engineering-harness

./: .gitignore  README.md  pyproject.toml
.engineering/: roadmap.yaml
.engineering/policies/: command-allowlist.yaml  deployment-policy.yaml  secret-policy.yaml
docs/: autonomous-engineering-harness-plan.md  browser-user-experience-e2e.md  durable-drive-controls.md  engineering-harness-system-spec.md  executor-contract.md  goal-intake-contract.md  goal-roadmap-planner.md  local-full-lifecycle-smoke.md  operator-observability-console.md  policy-engine-v2.md  spec-driven-development-plan.md  workspace-drive-dispatcher.md
src/engineering_harness/: __init__.py  browser_e2e.py  cli.py  core.py  domain_frontend.py  executors.py  goal_intake.py  goal_planner.py  io.py  policy_compat.py  profiles.py  spec_backlog.py
templates/: README.md
tests/: test_engineering_harness.py
tests/fixtures/roadmaps/invalid/: continuation-stage-without-tasks.json  duplicate-task-id.json  missing-acceptance.json  unknown-executor.json
tests/fixtures/roadmaps/valid/: api-only.json  cli-only.json  dashboard.json  multi-role-app.json  submission-review.json
