[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-harness"
version = "0.1.0"
description = "Roadmap-driven control plane for autonomous software engineering agents."
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]

[project.scripts]
engh = "engineering_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["engineering_harness*"]
